// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`refractor elements ResponsesElement given all fields of type ReferenceElement should refract to semantic ApiDOM tree 1`] = `
(ResponsesElement
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement))))
  (MemberElement
    (StringElement)
    (ReferenceElement
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements ResponsesElement given all fields of type ResponseElement should refract to semantic ApiDOM tree 1`] = `
(ResponsesElement
  (MemberElement
    (StringElement)
    (ResponseElement))
  (MemberElement
    (StringElement)
    (ResponseElement)))
`;

exports[`refractor elements given unrecognized fields should refract values to generic ApiDOM tree 1`] = `
(ResponsesElement
  (MemberElement
    (StringElement)
    (ObjectElement))
  (MemberElement
    (StringElement)
    (ObjectElement)))
`;
